Finished projects section, altered eslintrc file

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --background-color: #f9f9f9;
   --btn-color: #3F00FF;
   --btn-text-color: #F9F9F9;
-  --project-card-bg: #FFFFFF00;
+  --project-card-bg: #F9F9F9;
   --text-color: #0E1111;
   --form-text-color: #555555;
   --footer-text-color: #888888;
@@ -12,7 +12,7 @@
   --background-color: #0E1111;
   --btn-color: #3F00FF;
   --btn-text-color: #F9F9F9;
-  --project-card-bg: #FFFFFF00;
+  --project-card-bg: #F9F9F9;
   --text-color: #F9F9F9;
   --form-text-color: #F9F9F9;
   --footer-text-color: #BBBBBB;
