--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -45,7 +45,7 @@
 
   button:hover {
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.25);
-    transform: scale(1.05);
+    transform: translateY(-2px) scale(1.05);
   }
 
   button:active {
