--- a/src/sections/Contact/ContactStyles.module.css
+++ b/src/sections/Contact/ContactStyles.module.css
@@ -58,3 +58,20 @@ input[type="submit"]:active {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   transform: translateY(2px);
 }
+
+@media (width >= 800px) {
+  textarea, input:not([type="submit"]) {
+    width: 600px;
+    font-size: 20px;
+  }
+
+  form {
+    gap: 40px;
+  }
+}
+
+@media (width >= 1400px) {
+  textarea, input:not([type="submit"]) {
+    width: 800px;
+  }
+}
