--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -11,7 +11,7 @@
     max-width: 300px;
   }
 
-  span {
+  div {
     display: flex;
     gap: 25px;
     justify-content: center;
@@ -77,6 +77,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 350px;
 }
 
 @media (width >= 800px) {
