--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -24,12 +24,11 @@
   max-width: 40ch;
 }
 
-hr {
-  width: 200px;
-  height: 1px;
-  border: none;
-  background-color: var(--text-color);
-  margin: 30px auto;
+h4 {
+  color: var(--text-color);
+  font-family: 'Roboto Mono', monospace;
+  font-size: 20px;
+  padding: 20px;
 }
 
 @media (width >= 800px) {
