--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ p {
 }
 
 .sectionTitle {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .hover {
@@ -87,7 +87,7 @@ p {
   }
 
   .sectionTitle {
-    margin-bottom: 60px;
+    margin: 60px 0px;
   }
 }
 
