--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -22,13 +22,15 @@
   flex-wrap: wrap;
   row-gap: 40px;
   max-width: 40ch;
+  padding: 20px 0px;
 }
 
 h4 {
   color: var(--text-color);
   font-family: 'Roboto Mono', monospace;
-  font-size: 20px;
+  font-size: 28px;
   padding: 20px;
+  margin: 0px;
 }
 
 @media (width >= 800px) {
