--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -10,24 +10,24 @@
 
   .hero {
     max-width: 300px;
-    margin-top: 80px;
+    margin: 80px 0px;
   }
 
   div {
     display: flex;
     gap: 25px;
     justify-content: center;
+  }
 
-    a {
-      margin: 0;
+  .socials {
+    margin: 0;
 
-      img {
-        width: 50px;
-      }
+    img {
+      width: 50px;
     }
   }
 
-  a {
+  .download {
     width: fit-content;
     align-self: center;
   }
@@ -108,6 +108,37 @@
   animation: slideInLeft 1s ease-out;
 }
 
+.gameWrapper {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 20px;
+}
+
+.gameWrapperMessage {
+  font-family: 'Caveat', cursive;
+  font-size: 24px;
+  font-weight: 400;
+  color: var(--text-color);
+}
+
+.gameWrapperMessage::after {
+  content: var(--arrow-icon);
+  color: var(--text-color);
+  position: absolute;
+  rotate: 200deg;
+  top: 50%;
+  transform: translateY(30%) translateX(30%) scaleX(-1);
+  right: -35px;
+}
+
+.worldIcon {
+  width: 40px;
+}
+
 @keyframes slideInLeft {
   from {
     transform: translateX(-100%);
@@ -159,6 +190,20 @@
 
   .info {
     animation: slideInLeftSmall 1s ease-out;
+  }
+
+  .container {
+    .hero {
+      margin: 50px 0px;
+    }
+  }
+
+  .hide{
+    display: none;
+  }
+
+  .addSpace::before {
+    content: ' ';
   }
 }
 
