--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --text-color: #0E1111;
   --form-text-color: #555555;
   --footer-text-color: #888888;
+  --shadow-color: rgba(0, 0, 0, 0.35);
   --arrow-icon: url('../src/assets/arrow-black.svg');
 }
 
@@ -17,6 +18,7 @@
   --text-color: #F9F9F9;
   --form-text-color: #F9F9F9;
   --footer-text-color: #BBBBBB;
+  --shadow-color: rgba(255, 255, 255, 0.65);
   --arrow-icon: url('../src/assets/arrow-white.svg');
 }
 
